--- a/crscheduler-business/pom.xml
+++ b/crscheduler-business/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cl.ciisa.final-project</groupId>
-    <artifactId>crscheduler-persistence</artifactId>
+    <artifactId>crscheduler-business</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
@@ -15,10 +15,67 @@
     </parent>
 
     <dependencies>
+
+        <dependency>
+            <groupId>cl.ciisa.final-project</groupId>
+            <artifactId>crscheduler-persistence</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
+            <type>ejb</type>
+        </dependency>
+
         <dependency>
             <groupId>cl.ciisa.final-project</groupId>
             <artifactId>crscheduler-domain</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- para samba -->
+        <dependency>
+            <groupId>jcifs</groupId>
+            <artifactId>jcifs</artifactId>
+            <version>1.3.17</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.github.jsqlparser/jsqlparser -->
+        <dependency>
+            <groupId>com.github.jsqlparser</groupId>
+            <artifactId>jsqlparser</artifactId>
+            <version>0.9.6</version>
+        </dependency>
+
+        <!-- para usar cliente sw WS -->
+        <dependency>
+            <groupId>org.apache.axis</groupId>
+            <artifactId>axis</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-discovery</groupId>
+            <artifactId>commons-discovery</artifactId>
+            <version>0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml</groupId>
+            <artifactId>jaxrpc</artifactId>
+            <version>1.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>axis</groupId>
+            <artifactId>axis-saaj</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>wsdl4j</groupId>
+            <artifactId>wsdl4j</artifactId>
+            <version>1.5.1</version>
         </dependency>
 
         <!-- Melody, herramienta de monitoreo -->
@@ -33,6 +90,14 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.21</version>
+        </dependency>
+
+        <!-- api JEE, proporcionada por el contenedor -->
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>6.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- proveedor jpa de websphere 8.0 -->
@@ -73,7 +138,9 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                         </manifest>
+
                     </archive>
+
 
                 </configuration>
 
@@ -90,8 +157,5 @@
 
 
         </plugins>
-
-
     </build>
-
 </project>
