--- a/crscheduler-domain/pom.xml
+++ b/crscheduler-domain/pom.xml
@@ -3,7 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>cl.ciisa.final-project</groupId>
     <artifactId>crscheduler-domain</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -13,6 +12,36 @@
         <artifactId>classRoomScheduler</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    ﻿
+    <dependencies>
+        <!-- proveedor jpa de websphere 8.0 -->
+        <dependency>
+            <groupId>org.apache.openjpa</groupId>
+            <artifactId>openjpa</artifactId>
+            <version>2.1.1</version>
+            <scope>provided</scope>
+        </dependency>
 
-    
+        <!-- logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.21</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+                <version>3.5.1</version>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
