--- a/crscheduler-ear/pom.xml
+++ b/crscheduler-ear/pom.xml
@@ -14,6 +14,91 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>cl.ciisa.final-project</groupId>
+            <artifactId>crscheduler-web</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
 
+        <dependency>
+            <groupId>cl.ciisa.final-project</groupId>
+            <artifactId>crscheduler-business</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>ejb</type>
+        </dependency>
+
+        <dependency>
+            <groupId>cl.ciisa.final-project</groupId>
+            <artifactId>crscheduler-persistence</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>ejb</type>
+        </dependency>
+
+        <!-- proveedor jpa de websphere 8.0 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.21</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+
+            </resource>
+        </resources>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+
+                </configuration>
+                <version>3.5.1</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-ear-plugin</artifactId>
+                <version>2.10.1</version>
+                <configuration>
+
+                    <filtering>true</filtering>
+                    <earSourceDirectory>src/main/java</earSourceDirectory>
+
+                    <modules>
+                        <webModule>
+                            <groupId>cl.ciisa.final-project</groupId>
+                            <artifactId>crscheduler-web</artifactId>
+                            <contextRoot>/cr</contextRoot>
+                            <unpack>true</unpack>
+                        </webModule>
+                        <ejbModule>
+                            <groupId>ccl.ciisa.final-project</groupId>
+                            <artifactId>crsheduler-bussiness</artifactId>
+                            <unpack>true</unpack>
+                        </ejbModule>
+                        <ejbModule>
+                            <groupId>cl.ciisa.final-project</groupId>
+                            <artifactId>crsheduler-persistence</artifactId>
+                            <unpack>true</unpack>
+                        </ejbModule>
+
+                    </modules>
+                </configuration>
+            </plugin>
+
+        </plugins>
+
+
+    </build>
 
 </project>
