--- a/crscheduler-domain/pom.xml
+++ b/crscheduler-domain/pom.xml
@@ -1,19 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>cl.ciisa.final-project</groupId>
+
     <artifactId>crscheduler-domain</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>cl.ciisa.final-project</groupId>
         <artifactId>classRoomScheduler</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    ﻿
+
     <dependencies>
+
         <!-- proveedor jpa de websphere 8.0 -->
         <dependency>
             <groupId>org.apache.openjpa</groupId>
@@ -28,6 +30,7 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.21</version>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -41,7 +44,10 @@
                 </configuration>
                 <version>3.5.1</version>
             </plugin>
+
         </plugins>
+
     </build>
+
 
 </project>
