--- a/crscheduler-persistence/pom.xml
+++ b/crscheduler-persistence/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cl.ciisa.final-project</groupId>
     <artifactId>crscheduler-persistence</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>ejb</packaging>
 
     <parent>
         <groupId>cl.ciisa.final-project</groupId>
