--- a/crscheduler-business/pom.xml
+++ b/crscheduler-business/pom.xml
@@ -85,6 +85,12 @@
             <version>1.60.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+
         <!-- logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -114,6 +120,11 @@
             <artifactId>javax.ejb-api</artifactId>
             <version>3.2</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>6.1</version>
         </dependency>
     </dependencies>
 
