--- a/crscheduler-web/pom.xml
+++ b/crscheduler-web/pom.xml
@@ -27,6 +27,7 @@
             <groupId>cl.ciisa.final-project</groupId>
             <artifactId>crscheduler-domain</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Primefaces -->
